/*
routerd
Copyright (C) YEAR  The routerd Authors

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU Affero General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU Affero General Public License for more details.

You should have received a copy of the GNU Affero General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
*/

syntax = "proto3";
package machinery.testdata.v1;
option go_package = "routerd.net/machinery/storage/testdata/api/v1";

import "types.proto";

message TestObject {
  machinery.api.v1.ObjectMeta meta = 1;
  string field1 = 2;
  string field2 = 3;
  TestObjectStatus status = 4;
}

message TestObjectStatus {
  string status = 1;
}

message TestObjectList {
  repeated TestObject items = 1;
}
